adjust the font siz for RWD and circle for outline

--- a/UXportfolio_smarthome.html
+++ b/UXportfolio_smarthome.html
@@ -95,8 +95,8 @@
 		<!-- top-area End -->
 
 		<section>
-			<div id="outline">
-				<ul>
+			<div class="o" id="outline">
+				<uls>
 					<li><a href="#portfolio">Summary</a></li>
 					<li><a href="#Challenge">Challenge</a></li>
 					<li><a href="#Process">Process</a></li>
@@ -107,7 +107,7 @@
 		</section>
 		
 
-		<section id="portfolio" class="portfolio ppage">
+		<section id="portfolio" class="portfolio ppage describe">
 			<div class="section-heading text-center">
 				<h2>A smart home service design for eldercare</h2>
 				<p id="time"> August 2018 - August 2019, 1 year UX project (Master Thesis) </p>
@@ -206,7 +206,7 @@
 			</div>
 		</section>
 
-		<section class="describe" id="Challenge">
+		<section class="describe contentPart" id="Challenge">
 			<div>
 				<h2>Challenge</h2>
 				<p>According to the U.S. Census Bureau,<span> 11 million </span>, or <span> 28% </span> of people aged 65 and older, lived alone at the time of the census. Lots of research indicated that <span>senior isolation increases the risk of accidental death.</span> </p>
@@ -230,7 +230,7 @@
 			</div>
 		</section>
 
-		<section class="describe" id="Process">
+		<section class="describe contentPart" id="Process">
 			<div>
 				<h2>Project Process</h2>
 				<img src="img/portfolio/u7_process.png">
@@ -449,7 +449,7 @@
 			<hr>
 		</section>
 
-		<section class="describe" id="Result">
+		<section class="describe contentPart" id="Result">
 			<div>
 				<h2>Result</h2>
 			</div>
@@ -548,7 +548,7 @@
 			</div>
 		</section>
 
-		<section class="describe" id="Reflection">
+		<section class="describe contentPart" id="Reflection">
 			<div>
 				<h2>Project Reflection</h2>
 			</div>
