--- a/UXportfolio_smarthome.html
+++ b/UXportfolio_smarthome.html
@@ -563,7 +563,7 @@
 
 						</div>
 						<div class="col-md-6 topic">
-							<img style="max-height: 300px;" src="img/portfolio/u7_thesis.jpg">
+							<img style="max-height: 300px;" src="img/portfolio/u7_thesis.JPG">
 						</div>
 					</div>
 				</div>
