--- a/portfolio/u07_smarthome/u07_smarthome.html
+++ b/portfolio/u07_smarthome/u07_smarthome.html
@@ -647,7 +647,7 @@
 
 						</div>
 						<div class="col-md-6 topic">
-							<img style="max-height: 300px;" src="img/u7_thesis.JPG">
+							<img style="max-height: 300px;" src="img/u7_thesis.jpg">
 						</div>
 					</div>
 				</div>
