--- a/portfolio/u07_smarthome/u07_smarthome.html
+++ b/portfolio/u07_smarthome/u07_smarthome.html
@@ -419,14 +419,6 @@
 			<div>
 				<h3 id="P4">Prototype</h3>
 				<h4>Smart Home Modeling and VR environment Building</h4>
-				<p></p>
-				<div class="container">
-					<div class="row ">
-						<div style="margin-top: 2vh;" >
-							<iframe width="500" height="300" src="https://www.youtube.com/embed/JrafsyYx0zo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-						</div>
-					</div>
-				</div>
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 topic">
@@ -486,6 +478,13 @@
 						</div>
 					</div>
 				</div>
+				<div class="container">
+					<div class="row ">
+						<div class="videoWrapper" style="margin-top: 2vh;" >
+							<iframe width="480" height="270" src="https://www.youtube.com/embed/JrafsyYx0zo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						</div>
+					</div>
+				</div>				
 			</div>
 			<hr>
 			<div>
