--- a/portfolio/u07_smarthome/u07_smarthome.html
+++ b/portfolio/u07_smarthome/u07_smarthome.html
@@ -69,7 +69,7 @@
 			                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
 			                    <i class="fa fa-bars"></i>
 			                </button>
-			                <a class="navbar-brand" href="index.html">Debbie</a>
+			                <a class="navbar-brand" href="../../index.html">Debbie</a>
 			            </div><!--/.navbar-header-->
 			            <!-- End Header Navigation -->
 
@@ -77,12 +77,12 @@
 			            <div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
 			                <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 			                <li class=" smooth-menu active"></li>
-			                	<li class="smooth-menu"><a href="index.html#about">intro</a></li>
-			                    <li class=" smooth-menu"><a href="index.html#education">education</a></li>
-			                    <li class="smooth-menu"><a href="index.html#portfolio">portfolio</a></li>
-			                    <li class="smooth-menu"><a href="index.html#publication">publications</a></li>
-			                    <li class="smooth-menu"><a href="index.html#skills">skills</a></li>
-			                    <li class="smooth-menu"><a href="#contact">contact</a></li>
+			                	<li class="smooth-menu"><a href="../../index.html#about">intro</a></li>
+			                    <li class=" smooth-menu"><a href="../../index.html#education">education</a></li>
+			                    <li class="smooth-menu"><a href="../../index.html#portfolio">portfolio</a></li>
+			                    <li class="smooth-menu"><a href="../../index.html#publication">publications</a></li>
+			                    <li class="smooth-menu"><a href="../../index.html#skills">skills</a></li>
+			                    <li class="smooth-menu"><a href="../../index.html#contact">contact</a></li>
 			                </ul><!--/.nav -->
 			            </div><!-- /.navbar-collapse -->
 			        </div><!--/.container-->
@@ -691,7 +691,7 @@
 					<p>
 						&copy; copyright Debbie Chen. design and developed by <a href="https://www.themesine.com/">themesine</a>
 						<br>
-						latest version: 2020/06/26 21:50 GMT-5:00
+						latest version: 2020/06/27 18:50 GMT-5:00
 					</p><!--/p-->
 					
 				</div><!--/.text-center-->
