add competitive analysis image

--- a/portfolio/u12_Cinameet/u12_cinemeet.html
+++ b/portfolio/u12_Cinameet/u12_cinemeet.html
@@ -236,15 +236,7 @@
 							<li>We realized what is their pain and gain toward the fall issue.</li>
 						</div>
 						<div class="col-md-6 topic">
-							<img style="max-height: 300px;" src="img/u7_preliminary01.png">
-						</div>
-					</div>
-				</div>
-				<div class="container">
-					<div class="row">
-						<div class="col-md-6 topic">
-							<h5>Empathy Map</h5>
-							<img style="max-height: 280px;" src="img/u7_empathy_map.png" class="zoom_img" onclick="zoom_in(1)">
+							<img style="max-height: 300px;" src="img/u12_competitive.png" class="zoom_img" onclick="zoom_in(1)">
 
 							<!-- The Modal -->
 							<div class="modal zoom_modal">
@@ -256,8 +248,19 @@
 							  <img class="modal-content zoom_modal_img" >
 
 							  <!-- Modal Caption (Image Text) -->
-							  <div class="zoom_caption">Empathy Map</div>
+							  <div class="zoom_caption">Competitive Analysis</div>
 							</div>
+
+						</div>
+					</div>
+				</div>
+				<div class="container">
+					<div class="row">
+						<div class="col-md-6 topic">
+							<h5>Empathy Map</h5>
+							<img style="max-height: 280px;" src="img/u7_empathy_map.png" class="zoom_img" onclick="zoom_in(1)">
+
+							
 							
 						</div>
 						<div class="col-md-6 topic">
