upload brainstorming and competitive analysis part

--- a/portfolio/u12_Cinameet/u12_cinemeet.html
+++ b/portfolio/u12_Cinameet/u12_cinemeet.html
@@ -229,10 +229,15 @@
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col-md-6 paragraph">
-							<p> </p>
-							<li></li>
-							<li></li>
-							<li></li>
+							<p>To create an online sharing room, we discussed eight parts of it. </p>
+							<li>What the video genres would be(movie, series, entertainment TV show)?</li>
+							<li>Who would people watch with(parents, friends, the public)?</li>
+							<li>How to decide which video to watch together?</li>
+							<li>How to set time to watch together?</li>
+							<li>How to interact with people during the videos?</li>
+							<li>What will people do after they watch a video together?</li>
+							<li>How to create an atmosphere like in the movie theater?</li>
+							<li>How to store related information, like critics, feelings, etc.?  </li>
 						</div>
 						<div class="col-md-6 topic">
 							<h5>Mindmap of online video sharing room</h5>
@@ -282,11 +287,13 @@
 			<div>
 				<h3 id="P1">Preliminary Research</h3>
 				<h4>Competitive Analysis</h4>
-				<p></p>
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col-md-6 paragraph ">
-							<p>We had conversations with solitary elderlies.</p>
+							<p>During the brainstorming, we also took some competitors as reference. We picked 4 competitors to do the competitive analysis.</p>
+							<li>To check where the videos will come from and the copyright issue, we investigate their video resources and how to log in.</li>
+							<li>We also summarized the access control approaches here.</li>
+							<li>To explore what the interaction methods are now, we compare whether they have voice, message, where the message position is, and the storage methods.</li>
 							
 						</div>
 						<div class="col-md-6 topic">
