uploaded all content of the Cinemeet

--- a/portfolio/u12_Cinameet/u12_cinemeet.html
+++ b/portfolio/u12_Cinameet/u12_cinemeet.html
@@ -530,43 +530,43 @@
 							  <div class="mySlides ">
 							    <div class="numbertext">1 / 7</div>
 							    <img src="img/u12_paper01.jpeg">
-							    <div class="text">Correspondence between virtual and real environment</div>
+							    <div class="text">Home Page</div>
 							  </div>
 
 							  <div class="mySlides ">
 							    <div class="numbertext">2 / 7</div>
 							    <img src="img/u12_paper02.jpeg">
-							    <div class="text">Smart Lighting System in bedroom and bathroom</div>
+							    <div class="text">Message System</div>
 							  </div>
 
 							  <div class="mySlides ">
 							    <div class="numbertext">3 / 7</div>
 							    <img src="img/u12_paper03.jpg">
-							    <div class="text">Detection zone for voice assistant(bathroom entrance, toilet, bed)</div>
+							    <div class="text">Cinemeet page</div>
 							  </div>
 
 							  <div class="mySlides">
 							    <div class="numbertext">4 / 7</div>
 							    <img src="img/u12_paper04.jpeg">
-							    <div class="text">Smart Mat</div>
+							    <div class="text">Cinemeet userflow</div>
 							  </div>
 
 							  <div class="mySlides ">
 							    <div class="numbertext">5 / 7</div>
 							    <img src="img/u12_paper05.jpeg">
-							    <div class="text">Emergency notification system detection zones</div>
+							    <div class="text">Watching video page</div>
 							  </div>
 
 							  <div class="mySlides ">
 							    <div class="numbertext">6 / 7</div>
 							    <img src="img/u12_paper06.png">
-							    <div class="text">Emergency notification system detection zones</div>
+							    <div class="text">Watching video page(full-screen)</div>
 							  </div>
 
 							  <div class="mySlides ">
 							    <div class="numbertext">7 / 7</div>
 							    <img src="img/u12_paper07.png">
-							    <div class="text">Emergency notification system detection zones</div>
+							    <div class="text">Personal Information Page</div>
 							  </div>
 
 							  <!-- Next and previous buttons -->
@@ -602,55 +602,55 @@
 							  <div class="mySlides2 ">
 							    <div class="numbertext">1 / 9</div>
 							    <img src="img/u12_lowfi01.png">
-							    <div class="text">Correspondence between virtual and real environment</div>
+							    <div class="text">Home Page</div>
 							  </div>
 
 							  <div class="mySlides2 ">
 							    <div class="numbertext">2 / 9</div>
 							    <img src="img/u12_lowfi02.png">
-							    <div class="text">Smart Lighting System in bedroom and bathroom</div>
+							    <div class="text">Message System</div>
 							  </div>
 
 							  <div class="mySlides2 ">
 							    <div class="numbertext">3 / 9</div>
 							    <img src="img/u12_lowfi03.png">
-							    <div class="text">Detection zone for voice assistant(bathroom entrance, toilet, bed)</div>
+							    <div class="text">Movie Information Page</div>
 							  </div>
 
 							  <div class="mySlides2">
 							    <div class="numbertext">4 / 9</div>
 							    <img src="img/u12_lowfi04.jpeg">
-							    <div class="text">Smart Mat</div>
+							    <div class="text">Create Cinemeet</div>
 							  </div>
 
 							  <div class="mySlides2 ">
 							    <div class="numbertext">5 / 9</div>
 							    <img src="img/u12_lowfi05.jpeg">
-							    <div class="text">Emergency notification system detection zones</div>
+							    <div class="text">Cinemeet Event Page</div>
 							  </div>
 
 							  <div class="mySlides2 ">
 							    <div class="numbertext">6 / 9</div>
 							    <img src="img/u12_lowfi06.png">
-							    <div class="text">Detection zone for voice assistant(bathroom entrance, toilet, bed)</div>
+							    <div class="text">Control choices for the Cinemeet</div>
 							  </div>
 
 							  <div class="mySlides2 ">
 							    <div class="numbertext">7 / 9</div>
 							    <img src="img/u12_lowfi07.png">
-							    <div class="text">Detection zone for voice assistant(bathroom entrance, toilet, bed)</div>
+							    <div class="text">Watching movie Page</div>
 							  </div>
 
 							  <div class="mySlides2 ">
 							    <div class="numbertext">8 / 9</div>
 							    <img src="img/u12_lowfi08.png">
-							    <div class="text">Detection zone for voice assistant(bathroom entrance, toilet, bed)</div>
+							    <div class="text">Watching movie Page(full-screen)</div>
 							  </div>
 
 							  <div class="mySlides2 ">
 							    <div class="numbertext">9 / 9</div>
 							    <img src="img/u12_lowfi09.png">
-							    <div class="text">Detection zone for voice assistant(bathroom entrance, toilet, bed)</div>
+							    <div class="text">Personal Information Page</div>
 							  </div>
 
 							  <!-- Next and previous buttons -->
@@ -757,7 +757,7 @@
 					<div class="row align-items-center" style="margin-bottom: 3vh;">
 						<div class="col-md-6 paragraph">
 							<p>As our users said, people would regard every viewed movie as a memorable collection and learning record. Therefore, we designed our Cinemeet as a memory. </p>
-							<p>In the Cinemeet page, participants can vote, leave comments and feelings. The host can also pick some interesting quotes, pictures, or famous scenes for people to remember.. </p>
+							<p>In the Cinemeet page, participants can vote, leave comments and feelings. The host can also pick some interesting quotes, pictures, or famous scenes for people to remember. </p>
 
 						</div>
 						<div class="col-md-6 topic">
@@ -796,11 +796,11 @@
 					<div class="row align-items-center">
 						<div class="col-md-6 paragraph">
 							<ol>
-								<li> <span>Collection System: </span>  </li>
+								<li> <span>Collection System: </span> For further consideration, we plan to complete the collection system. Users may screenshot or highlight their favorite quotes or scenes during watching directly. Besides, there should be a sharing function for users to share with friends. </li>
 								<br>
-								<li><span>Friendship and Following System: </span> </li>
+								<li><span>Friendship and Following System: </span> For this version, we only have the following system. However, we also consider that we need both friends and followers system for private sharing room discussion. In addition, we will add the badge system to highlight who is the movie star or popular hosts. </li>
 								<br>
-								<li><span>Movie Meetup:</span> </li>
+								<li><span>Movie Meetup:</span> For the long-term movie discussion, having a movie meetup system is necessary. We can create a movie sharing ecosystem and have some theme meetups, like Jane Austen, Harry Potter. Iw will be an entertaining movie sharing platform!</li>
 								
 							</ol>
 						</div>
