change index welcome photo

--- a/index.html
+++ b/index.html
@@ -102,9 +102,11 @@
 				<div class="row">
 					<div class="col-md-12 text-center">
 						<div class="header-text">
-							<h2>hi <span>,</span> i am <br> Debbie <br> Chen <span>.</span>   </h2>
+							<h2>hi <span>,</span> i am <br> Debbie Chen <span>.</span>   </h2>
+							<br>
+							<h3>Sympathetic Listener, Enthusiastic Engineer, <br>LifeLong Learner for the whole universe </h3>
 							<p>Front-End Developer | Human Computer Interaction(Game | UI/UX Design) | Data Analyst</p>
-							<a href="download/resume.pdf" download>download resume</a>
+							<!-- <a href="download/resume.pdf" download>download resume</a> -->
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
@@ -520,7 +522,7 @@
 								</div>
 
 								<div class="col-sm-4">
-									<div class="item">
+									<div class="item first-item">
 										<img src="img/portfolio/u07_smarthome.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="portfolio/u07_smarthome/u07_smarthome.html">
@@ -581,7 +583,7 @@
 								</div>
 
 								<div class="col-sm-4">
-									<div class="item">
+									<div class="item first-item">
 										<img src="img/portfolio/u06_app.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="UXportfolio_tencentapp.html">
@@ -616,7 +618,7 @@
 								</div>
 
 								<div class="col-sm-4">
-									<div class="item">
+									<div class="item first-item">
 										<img src="img/portfolio/u12_cinemeet.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="portfolio/u12_Cinameet/u12_cinemeet.html">
