add lifelong to portfolio

--- a/portfolio/u11_GroupIn/u11_GroupIn.html
+++ b/portfolio/u11_GroupIn/u11_GroupIn.html
@@ -110,9 +110,9 @@
 
 		<section id="portfolio" class="portfolio ppage describe">
 			<div class="section-heading text-center">
-				<h2>A smart home service design for eldercare</h2>
-				<p id="time"> August 2018 - August 2019, 1 year UX project (Master Thesis) </p>
-				<p id="keyword"> Eldercare | IoT | Smart Home | Service Design | Virtual Reality </p>
+				<h2>GroupIn</h2>
+				<p id="time"> February 2020 - May 2020, 3 months UX project </p>
+				<p id="keyword"> Group | Match Teammates | App Design </p>
 			</div>
 			<div class="heading">
 				<h3>Summary</h3>
@@ -120,44 +120,35 @@
 			
 			<div class="container highlight">
 				<div class="row row-summary" >
-					<div class="col-md-5">
+					<div class="col-md-7">
 						<div class="summary">	
-							<p>Smart Home seems to be a solution for population aging. However, we don't know the elderly's thought of smart home and technology. To understand their attitude toward IoT technology, I built a smart home simulation with virtual reality to let the elderly experience future service in the smart home. </p>
+							<p>GroupIn is an app for iOS that can be used on the first day of any new class. It will help instructors and students overcome that awkward first-day-of-class, get-to-know you scenario, and provide some help forming groups within the class. The app will feature three functions: an instructor mode, a student mode, and a group mode. It is meant to provide a short, simple solution to a specific audience for a designated time. </p>
+							<br>
+							<p>Two main features:</p>
+							<p>1. Students provide a short profile for others in the class to use when forming groups</p>
+							<p>2. Provides ice-breaker games to allow class members a way to engage with others</p>
 						</div>
 					</div>
-					<div class="col-md-7">
+					<div class="col-md-5">
 						<div class="highlight-img">
-							<img src="img/u7_summary01.png">
+							<img src="img/u11_summary01.png">
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="container highlight">
-				<div class="row row-summary" >
-					<div class="col-md-5">
-						<div class="summary">	
-							<p>The primary purpose of the research is to understand the elderly's acceptance of the IoT and smart home technology. Besides, as we used virtual reality to be a novel testing tool for older adults, we want to evaluate whether VR can be a possible solution for experiencing service in the future. </p>
-						</div>
-					</div>
-					<div class="col-md-7">
-						<div class="highlight-img">
-							<img src="img/u7_summary02.png">
-						</div>
-					</div>
-				</div>
-			</div>
+			
 			<div class="container highlight">
 				<div class="row " >
 					<div class="col-sm-8">
 						
 						<div class="role">
 							<h3>My Role</h3>
-							<p>As a UX researcher/designer/engineer in this project, I cooperate with NTU iNsight UX team and participated in all the process.</p>
+							<p>As a UX researcher/designer in this project, I cooperate with my classmates and participated in all the process.</p>
 							<br>
 							<ul>Main Tasks</ul>
-								<li>Investigated the elderly's needs with Empathy Map and Journey Map</li>
-								<li>Formulated a reasonable scenario in a smart home for simulation</li>
-								<li>Engineered a Virtual Reality(VR) smart home</li>
+								<li>Investigated the Target Users(TA) needs with interviews and surveys</li>
+								<li>Formulated a reasonable strategy blueprint for GroupIn</li>
+								<li>Designed </li>
 								<li>Recruited and Interviewed 10 older adults with Focus Group and Participatory Design methods</li>
 								<li>Pioneered in the development of VR for elderly testing </li>
 								<li>Produced a research report with the insight of the IoT future in the eldercare field</li>
@@ -170,17 +161,15 @@
 						<div class="method">
 							<h3>Method</h3>
 							<ul>Preliminary research</ul>
-								<li>Empathy Map</li>
-								<li>Journey Map</li>
+								<li>Competitive Analysis</li>
+								<li>User Interview</li>
+								<li>Survey</li>
 							<ul>Ideation</ul>
-								<li>Service Blueprint</li>
+								<li>Architectural Strategy</li>
 							<ul>Prototype</ul>
-								<li>Sketch Up</li>
-								<li>Vritual Reality with Unity</li>
-							<ul>User research</ul>
-								<li>Participatory Design</li>
-								<li>Focus Group Interview</li>
-								<li>KANO analysis</li>
+								<li>Figma</li>
+							<ul>User Testing</ul>
+								<li>UserTesting.com</li>
 						</div>
 					</div>
 				</div>
@@ -190,17 +179,15 @@
 					<div class="col-sm-8">
 						<div class="teammate">
 							<h3>Teammates</h3>
-							<p>NTU iNsight UX Team</p>
-							<p>Chuin-Shan Chen (Instructor)</p>
-							<p>Chia-Yi Chen (Instructor)</p>
-							<p>Debbie Chen (UX Researcher / Engineer) </p>
+							<p>Amy Simpson</p>
+							<p>Wayne Wang</p>
+							<p>Debbie Chen</p>
 						</div>
 					</div>
 					<div class="col-sm-4">
 						<div class="DeliverableResults">
 							<h3>Deliverable Results</h3>
-							<p>UX Research Report</p>
-							<p>VR Smart Home Simulation</p>
+							<p>GroupIn Hi-Fi Prototype</p>
 						</div>
 					</div>
 				</div>
