update UI/UX part

--- a/index.html
+++ b/index.html
@@ -360,6 +360,20 @@
 									</div> -->
 								</div>
 								<div class="col-sm-4">
+									<div class="item first-item">
+										<img src="img/portfolio/u12_cinemeet.png" alt="portfolio image"/>
+										<div class="isotope-overlay">
+											<a href="portfolio/u12_Cinameet/u12_cinemeet.html">
+												<h4>Cinemeet</h4>
+												
+												<h5> This is Adobe Creative Jam X Netflix project. We design a website in three days for people to watch videos together during quarantine time.</h5>
+
+												<p> Adobe Creative Jam, User Research, Design Thunking </p>
+
+											</a>
+										</div><!-- /.isotope-overlay -->
+									</div><!-- /.item -->
+
 									<!-- <div class="item">
 										<img src="img/portfolio/u02_concert.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
@@ -425,11 +439,11 @@
 								<div class="col-sm-4"></div>
 
 								<div class="col-xs-12">
-									<h3>Hackthon | Design Jam</h3>
+									<!-- <h3>Hackthon | Design Jam</h3> -->
 								</div>
 
 								<div class="col-sm-4">
-									<div class="item first-item">
+									<!-- <div class="item first-item">
 										<img src="img/portfolio/u12_cinemeet.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="portfolio/u12_Cinameet/u12_cinemeet.html">
@@ -440,8 +454,8 @@
 												<p> </p>
 
 											</a>
-										</div><!-- /.isotope-overlay -->
-									</div><!-- /.item -->
+										</div>
+									</div> -->
 								</div>
 								<div class="col-sm-4"></div>
 								<div class="col-sm-4"></div>
