--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 
 							<div class="row tabcontent" id="uiux"> <!--UI/UX Design-->
 								<div class="col-xs-12">
-									<h3>UX Design | Design Thinking</h3>
+									<!-- <h3>UX Design | Design Thinking</h3> -->
 								</div>
 
 								<div class="col-sm-4">
