improve the scrollspy for nested sidebar nav

--- a/portfolio/u07_smarthome/u07_smarthome.html
+++ b/portfolio/u07_smarthome/u07_smarthome.html
@@ -97,14 +97,29 @@
 
 		<section>
 			<div class="o" id="outline">
-				<uls>
+				<p>Eldercare SmartHome</p>
+				<ul>
 					<li><a href="#portfolio">Summary</a></li>
 					<li><a href="#Challenge">Challenge</a></li>
-					<li><a href="#Process">Process</a></li>
+					<li>
+						<a href="#Process">Process</a>
+						<ul class="subOutline">
+							<li>
+								<a href="#P1">Prelim RSRCH</a>
+								<ul class="subsubOutline">
+									<li><a href="#PP1">User INTVW</a></li>
+									<li><a href="#PP2">Expert INTVW</a></li>
+								</ul>
+							</li>
+							<li><a href="#P3">Ideation</a></li>
+							<li><a href="#P4">Prototype</a></li>
+							<li><a href="#P5">Qual RSRCH</a></li>
+						</ul>
+					</li>
 					<li><a href="#Result">Result</a></li>
 					<li><a href="#Reflection">Reflection</a></li>
 				</ul>
-			</div>			
+			</div>		
 		</section>
 		
 
@@ -252,8 +267,8 @@
 			</div>
 			<hr>
 			<div>
-				<h3 id="P1">Preliminary Research</h3>
-				<h4>End User Interview</h4>
+				<h3 class="describe" id="P1">Preliminary Research</h3>
+				<h4 class="describe" id="PP1">End User Interview</h4>
 				<p></p>
 				<div class="container">
 					<div class="row align-items-center">
@@ -312,8 +327,8 @@
 			</div>
 			<hr>
 			<div>
-				<h3 id="P2">Preliminary Research</h3>
-				<h4>Expert Interview</h4>
+				<h3 class="describe" id="P1">Preliminary Research</h3>
+				<h4 class="describe" id="PP2">Expert Interview</h4>
 				<p></p>
 				<div class="container">
 					<div class="row align-items-center">
@@ -342,7 +357,7 @@
 			</div>
 			<hr>
 			<div>
-				<h3 id="P3">Ideation</h3>
+				<h3 class="describe" id="P3">Ideation</h3>
 				<h4>Service Design and Scenario</h4>
 				<p></p>
 				<div class="container">
@@ -417,7 +432,7 @@
 			</div>
 			<hr>
 			<div>
-				<h3 id="P4">Prototype</h3>
+				<h3 class="describe" id="P4">Prototype</h3>
 				<h4>Smart Home Modeling and VR environment Building</h4>
 				<div class="container">
 					<div class="row">
@@ -488,7 +503,7 @@
 			</div>
 			<hr>
 			<div>
-				<h3 id="P5">Qualitive User Research</h3>
+				<h3 class="describe" id="P5">Qualitive User Research</h3>
 				<h4>Recruit</h4>
 				<div class="container">
 					<div class="row align-items-center">
