--- a/portfolio/u12_Cinameet/u12_cinemeet.html
+++ b/portfolio/u12_Cinameet/u12_cinemeet.html
@@ -97,10 +97,31 @@
 
 		<section>
 			<div class="o" id="outline">
-				<uls>
+				<p>Cinemeet</p>
+				<ul>
 					<li><a href="#portfolio">Summary</a></li>
 					<li><a href="#Challenge">Challenge</a></li>
-					<li><a href="#Process">Process</a></li>
+					<li>
+						<a href="#Process">Process</a>
+						<ul class="subOutline">
+							<li><a href="#P1">Ideation</a></li>
+							<li>
+								<a href="#P2">Prelim RSRCH</a>
+								<ul class="subsubOutline">
+									<li><a href="#PP1">Competitive Anal</a></li>
+									<li><a href="#PP2">User INTVW</a></li>
+								</ul>
+							</li>
+							<li>
+								<a href="#P3">Prototype</a>
+								<ul class="subsubOutline">
+									<li><a href="#PP3">Paper Sketch</a></li>
+									<li><a href="#PP4">Lo-Fi</a></li>
+									<li><a href="#PP5">User Flow</a></li>
+								</ul>
+							</li>
+						</ul>
+					</li>
 					<li><a href="#Result">Result</a></li>
 					<li><a href="#Reflection">Reflection</a></li>
 				</ul>
@@ -223,7 +244,7 @@
 			</div>
 			<hr>
 			<div>
-				<h3 id="P3">Ideation</h3>
+				<h3 class="describe" id="P1">Ideation</h3>
 				<h4>Brainstorming online video sharing room</h4>
 				<p></p>
 				<div class="container">
@@ -285,8 +306,8 @@
 			</div>
 			<hr>
 			<div>
-				<h3 id="P1">Preliminary Research</h3>
-				<h4>Competitive Analysis</h4>
+				<h3 class="describe" id="P2">Preliminary Research</h3>
+				<h4 class="describe" id="PP1">Competitive Analysis</h4>
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col-md-6 paragraph ">
@@ -414,8 +435,8 @@
 			</div>
 			<!-- <hr> -->
 			<div>
-				<h3 id="P2">Preliminary Research</h3>
-				<h4>End User Interview</h4>
+				<h3 class="describe" id="P2">Preliminary Research</h3>
+				<h4 class="describe" id="PP2">End User Interview</h4>
 				<p></p>
 				<div class="container">
 					<div class="row align-items-center">
@@ -516,8 +537,8 @@
 			
 			
 			<div>
-				<h3 id="P4">Prototype</h3>
-				<h4>Paper Sketch</h4>
+				<h3 class="describe" id="P3">Prototype</h3>
+				<h4 class="describe" id="PP3">Paper Sketch</h4>
 				<br>
 				<div class="container">
 					<div class="row">
@@ -589,7 +610,7 @@
 					</div>
 				</div>
 				<hr>
-				<h4>Lo-fi Prototype</h4>
+				<h4 class="describe" id="PP4">Lo-fi Prototype</h4>
 				<br>
 				<div class="container">
 					<div class="row">
@@ -675,7 +696,7 @@
 					</div>
 				</div>
 				<hr>
-				<h4>User flow</h4>
+				<h4 class="describe" id="PP5">User flow</h4>
 				<br>
 				<div class="container">
 					<div class="row ">
