--- a/portfolio/u11_GroupIn/u11_GroupIn.html
+++ b/portfolio/u11_GroupIn/u11_GroupIn.html
@@ -97,10 +97,39 @@
 
 		<section>
 			<div class="o" id="outline">
-				<uls>
+				<p>GroupIn</p>
+				<ul>
 					<li><a href="#portfolio">Summary</a></li>
 					<li><a href="#Challenge">Challenge</a></li>
-					<li><a href="#Process">Process</a></li>
+					<li>
+						<a href="#Process">Process</a>
+						<ul class="subOutline">
+							<li>
+								<a href="#P1">Prelim RSRCH</a>
+								<!-- <ul class="subsubOutline">
+									<li><a href="#PP1">Competitive Anal</a></li>
+									<li><a href="#PP2">User INTVW</a></li>
+									<li><a href="#PP3">Survey</a></li>
+								</ul> -->
+							</li>
+							<li><a href="#P2">Ideation</a></li>
+							<li>
+								<a href="#P3">Prototype</a>
+								<!-- <ul class="subsubOutline">
+									<li><a href="#PP4">Lo-Fi</a></li>
+									<li><a href="#PP5">Color Scheme</a></li>
+									<li><a href="#PP6">Hi-Fi</a></li>
+								</ul> -->
+							</li>
+							<li>
+								<a href="#P4">User Testing</a>
+								<!-- <ul class="subsubOutline">
+									<li><a href="#PP7">Iteration1</a></li>
+									<li><a href="#PP8">Iteration2</a></li>
+								</ul> -->
+							</li>
+						</ul>
+					</li>
 					<li><a href="#Result">Result</a></li>
 					<li><a href="#Reflection">Reflection</a></li>
 				</ul>
@@ -231,17 +260,17 @@
 			</div>
 			<hr>
 			<div>
-				<h3 id="P0">Preliminary Research</h3>
-				<h4>Competitive Analysis</h4>
+				<h3 class="describe" id="P1">Preliminary Research</h3>
+				<h4 class="describe" id="PP1">Competitive Analysis</h4>
 				<p></p>
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col-md-6 paragraph ">
-							<p>We had conversations with solitary elderlies.</p>
-							<li>We heard <span> falls in the elderly is a severe issue </span> that needs to be solved when living alone.</li>
-							<li>We learned most of the <span> falls occur during the night time bathroom trips. </span></li>
-							<li>We learned how they thought and felt when they faced their fall experience. </li>
-							<li>We realized what is their pain and gain toward the fall issue.</li>
+							<p></p>
+							<li> <span>  </span> </li>
+							<li> <span>  </span></li>
+							<li> </li>
+							<li></li>
 						</div>
 						<div class="col-md-6 topic">
 							<h5>Competitve Analysis Overview</h5>
@@ -305,17 +334,17 @@
 			</div>
 			<hr>
 			<div>
-				<h3 id="P1">Preliminary Research</h3>
-				<h4>End User Interview</h4>
+				<h3 class="describe" id="P1">Preliminary Research</h3>
+				<h4 class="describe" id="PP2">End User Interview</h4>
 				<p></p>
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col-md-6 paragraph ">
-							<p>We had conversations with solitary elderlies.</p>
-							<li>We heard <span> falls in the elderly is a severe issue </span> that needs to be solved when living alone.</li>
-							<li>We learned most of the <span> falls occur during the night time bathroom trips. </span></li>
-							<li>We learned how they thought and felt when they faced their fall experience. </li>
-							<li>We realized what is their pain and gain toward the fall issue.</li>
+							<p>.</p>
+							<li> <span>  </span> </li>
+							<li> <span>  </span></li>
+							<li> </li>
+							<li></li>
 						</div>
 						<div class="col-md-6 topic">
 							<h5>Interview Demographic</h5>
@@ -397,8 +426,8 @@
 			</div>
 			<hr>
 			<div>
-				<h3 id="P2">Preliminary Research</h3>
-				<h4>Survey</h4>
+				<h3 class="describe" id="P1">Preliminary Research</h3>
+				<h4 class="describe" id="PP3">Survey</h4>
 				<p></p>
 				<div class="container">
 					<div class="row align-items-center">
@@ -427,7 +456,7 @@
 			</div>
 			<hr>
 			<div>
-				<h3 id="P3">Ideation</h3>
+				<h3 class="describe" id="P2">Ideation</h3>
 				<h4>Architectural Strategy</h4>
 				<p></p>
 				<div class="container">
@@ -502,8 +531,8 @@
 			</div>
 			<hr>
 			<div>
-				<h3 id="P4">Prototype</h3>
-				<h4>Lo-Fi Wireframe</h4>
+				<h3 class="describe" id="P3">Prototype</h3>
+				<h4 class="describe" id="PP4">Lo-Fi Wireframe</h4>
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 topic">
@@ -563,13 +592,19 @@
 						</div>
 					</div>
 				</div>
-				<!-- <div class="container">
+				<div class="container">
 					<div class="row ">
-						<div class="videoWrapper" style="margin-top: 2vh;" >
-							<iframe width="480" height="270" src="https://www.youtube.com/embed/JrafsyYx0zo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<div class="col-md-3 topic">
+							
 						</div>
+						<div class="col-md-9 topic">
+							<div class="videoWrapper" style="margin-top: 2vh;" >
+								<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FhEDlhkgzhXSaDAuzEgBTYX%2FGroupIn_prototype%3Fnode-id%3D0%253A404%26scaling%3Dscale-down" allowfullscreen></iframe>
+							</div>
+						</div>
+						
 					</div>
-				</div>		 -->		
+				</div>				
 			</div>
 			<hr>
 			<div>
