--- a/index.html
+++ b/index.html
@@ -399,27 +399,29 @@
 											</a>
 										</div><!-- /.isotope-overlay -->
 										<div> 
-											<span class="badge"> Social </span>
+											<span class="badge"> Video2gether </span>
 											<span class="badge"> UX Design </span>
 											<span class="badge"> Website </span>
+											<span class="badge"> Design Jam </span>
 										</div>
 									</div><!-- /.item -->
 									<div class="item">
-										<img src="img/portfolio/u08_360film.png" alt="portfolio image"/>
+										<img src="img/portfolio/u09_foodix.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="document/film-language.pdf" target="_blank">
-												<h4>Film Language Analysis in 360 Society News</h4>
+											<a href="document/Foodix.pdf" target="_blank">
+												<h4>Foodix</h4>
 												
-												<h5> This is a user research project that we analyzed the film language of 360 videos and tried to understand users' thoughts and feelings. We hope to design a guildline for 360 videos in the future.</h5>
+												<h5> This project is a food and cultural exchange app. As a team built with international students, we hope to connect with different people and share their cultures!</h5>
 
-												<p> 360 videos, film language analysis, society news, immersion and empathy </p>
+												<p> social, food and culture exchange, app </p>
 
 											</a>
 										</div><!-- /.isotope-overlay -->
 										<div> 
-											<span class="badge"> Media </span>
-											<span class="badge"> UX Research </span>
-											<span class="badge"> 360 Video </span>
+											<span class="badge"> Culture Exchange </span>
+											<span class="badge"> UX Design </span>
+											<span class="badge"> App </span>
+											<span class="badge"> Hackthon </span>
 										</div>
 									</div><!-- /.item -->
 
@@ -454,6 +456,25 @@
 											<span class="badge"> Trust </span>
 											<span class="badge"> UX Design </span>
 											<span class="badge"> AR </span>
+										</div>
+									</div><!-- /.item -->
+
+									<div class="item">
+										<img src="img/portfolio/u08_360film.png" alt="portfolio image"/>
+										<div class="isotope-overlay">
+											<a href="document/film-language.pdf" target="_blank">
+												<h4>Film Language Analysis in 360 Society News</h4>
+												
+												<h5> This is a user research project that we analyzed the film language of 360 videos and tried to understand users' thoughts and feelings. We hope to design a guildline for 360 videos in the future.</h5>
+
+												<p> 360 videos, film language analysis, society news, immersion and empathy </p>
+
+											</a>
+										</div><!-- /.isotope-overlay -->
+										<div> 
+											<span class="badge"> Media </span>
+											<span class="badge"> UX Research </span>
+											<span class="badge"> 360 Video </span>
 										</div>
 									</div><!-- /.item -->
 									<!-- <div class="item">
