create about_me page

--- a/portfolio/u12_Cinameet/u12_cinemeet.html
+++ b/portfolio/u12_Cinameet/u12_cinemeet.html
@@ -77,12 +77,9 @@
 			            <div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
 			                <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 			                <li class=" smooth-menu active"></li>
-			                	<li class="smooth-menu"><a href="../../index.html#about">intro</a></li>
-			                    <li class=" smooth-menu"><a href="../../index.html#education">education</a></li>
-			                    <li class="smooth-menu"><a href="../../index.html#portfolio">portfolio</a></li>
-			                    <li class="smooth-menu"><a href="../../index.html#publication">publications</a></li>
-			                    <li class="smooth-menu"><a href="../../index.html#skills">skills</a></li>
-			                    <li class="smooth-menu"><a href="../../index.html#contact">contact</a></li>
+			                	<li class="smooth-menu"><a href="../../index.html">home</a></li>
+			                    <li class="smooth-menu"><a href="../../index.html#portfolio">Portfolio</a></li>
+			                    <li class="smooth-menu"><a href="../../about_me.html">About me</a></li>
 			                </ul><!--/.nav -->
 			            </div><!-- /.navbar-collapse -->
 			        </div><!--/.container-->
